Tutorials/OldQuiz/Tutorial/02 Syntax Analysis/Tree/MPParser.java
// Generated from MP.g4 by ANTLR 4.7.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MPParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		LINE_CMT=1, BLOCK_CMT_1=2, BLOCK_CMT_2=3, ANDTHEN=4, ORELSE=5, BREAK=6, 
		CONTINUE=7, FOR=8, WHILE=9, TO=10, DOWNTO=11, WITH=12, DO=13, IF=14, THEN=15, 
		ELSE=16, VAR=17, OF=18, BEGIN=19, END=20, RETURN=21, FUNCTION=22, PROCEDURE=23, 
		ARRAY=24, REAL=25, BOOLEAN=26, INTEGER=27, STRING=28, NOT=29, AND=30, 
		OR=31, DIV=32, MOD=33, ADD=34, SUB=35, MUL=36, DIV_F=37, EQUAL=38, NOTEQUAL=39, 
		LESSTHAN=40, GREATERTHAN=41, LESSEQUAL=42, GREATEREQUAL=43, ASSIGN=44, 
		LSB=45, RSB=46, COLON=47, LB=48, RB=49, SEMI=50, DDOT=51, COMMA=52, INTEGER_LITERAL=53, 
		REAL_LITERAL=54, BOOLEAN_LITERAL=55, TRUE=56, FALSE=57, UNCLOSE_STRING=58, 
		ILLEGAL_ESCAPE=59, STRING_LITERAL=60, IDENTIFIER=61, WS=62, ERROR_CHAR=63;
	public static final int
		RULE_program = 0, RULE_many_declarations = 1, RULE_declaration = 2, RULE_variable_declaration = 3, 
		RULE_list_declarations = 4, RULE_v_declaration = 5, RULE_list_identifiers = 6, 
		RULE_function_declaration = 7, RULE_list_parameters = 8, RULE_not_null_list_parameters = 9, 
		RULE_parameter_declaration = 10, RULE_procedure_declaration = 11, RULE_literal = 12, 
		RULE_types = 13, RULE_primitive_type = 14, RULE_compound_type = 15, RULE_array_type = 16, 
		RULE_operand = 17, RULE_expression = 18, RULE_expression_1 = 19, RULE_expression_2 = 20, 
		RULE_expression_3 = 21, RULE_expression_4 = 22, RULE_expression_5 = 23, 
		RULE_expression_6 = 24, RULE_arr_element = 25, RULE_func_call = 26, RULE_list_expression = 27, 
		RULE_not_null_list_expression = 28, RULE_statement = 29, RULE_assignment_statement = 30, 
		RULE_list_var_idx_ass = 31, RULE_if_statement = 32, RULE_while_statement = 33, 
		RULE_for_statement = 34, RULE_break_statement = 35, RULE_continue_statement = 36, 
		RULE_return_statement = 37, RULE_compound_statement = 38, RULE_list_statements = 39, 
		RULE_not_null_list_statements = 40, RULE_with_statement = 41, RULE_call_statement = 42;
	public static final String[] ruleNames = {
		"program", "many_declarations", "declaration", "variable_declaration", 
		"list_declarations", "v_declaration", "list_identifiers", "function_declaration", 
		"list_parameters", "not_null_list_parameters", "parameter_declaration", 
		"procedure_declaration", "literal", "types", "primitive_type", "compound_type", 
		"array_type", "operand", "expression", "expression_1", "expression_2", 
		"expression_3", "expression_4", "expression_5", "expression_6", "arr_element", 
		"func_call", "list_expression", "not_null_list_expression", "statement", 
		"assignment_statement", "list_var_idx_ass", "if_statement", "while_statement", 
		"for_statement", "break_statement", "continue_statement", "return_statement", 
		"compound_statement", "list_statements", "not_null_list_statements", "with_statement", 
		"call_statement"
	};

	private static final String[] _LITERAL_NAMES = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, null, null, null, null, null, null, "'+'", "'-'", 
		"'*'", "'/'", "'='", "'<>'", "'<'", "'>'", "'<='", "'>='", "':='", "'['", 
		"']'", "':'", "'('", "')'", "';'", "'..'", "','"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "LINE_CMT", "BLOCK_CMT_1", "BLOCK_CMT_2", "ANDTHEN", "ORELSE", "BREAK", 
		"CONTINUE", "FOR", "WHILE", "TO", "DOWNTO", "WITH", "DO", "IF", "THEN", 
		"ELSE", "VAR", "OF", "BEGIN", "END", "RETURN", "FUNCTION", "PROCEDURE", 
		"ARRAY", "REAL", "BOOLEAN", "INTEGER", "STRING", "NOT", "AND", "OR", "DIV", 
		"MOD", "ADD", "SUB", "MUL", "DIV_F", "EQUAL", "NOTEQUAL", "LESSTHAN", 
		"GREATERTHAN", "LESSEQUAL", "GREATEREQUAL", "ASSIGN", "LSB", "RSB", "COLON", 
		"LB", "RB", "SEMI", "DDOT", "COMMA", "INTEGER_LITERAL", "REAL_LITERAL", 
		"BOOLEAN_LITERAL", "TRUE", "FALSE", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
		"STRING_LITERAL", "IDENTIFIER", "WS", "ERROR_CHAR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "MP.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public MPParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public Many_declarationsContext many_declarations() {
			return getRuleContext(Many_declarationsContext.class,0);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(86);
			many_declarations(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Many_declarationsContext extends ParserRuleContext {
		public DeclarationContext declaration() {
			return getRuleContext(DeclarationContext.class,0);
		}
		public Many_declarationsContext many_declarations() {
			return getRuleContext(Many_declarationsContext.class,0);
		}
		public Many_declarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_many_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterMany_declarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitMany_declarations(this);
		}
	}

	public final Many_declarationsContext many_declarations() throws RecognitionException {
		return many_declarations(0);
	}

	private Many_declarationsContext many_declarations(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Many_declarationsContext _localctx = new Many_declarationsContext(_ctx, _parentState);
		Many_declarationsContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_many_declarations, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(89);
			declaration();
			}
			_ctx.stop = _input.LT(-1);
			setState(95);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new Many_declarationsContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_many_declarations);
					setState(91);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(92);
					declaration();
					}
					} 
				}
				setState(97);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,0,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class DeclarationContext extends ParserRuleContext {
		public Variable_declarationContext variable_declaration() {
			return getRuleContext(Variable_declarationContext.class,0);
		}
		public Function_declarationContext function_declaration() {
			return getRuleContext(Function_declarationContext.class,0);
		}
		public Procedure_declarationContext procedure_declaration() {
			return getRuleContext(Procedure_declarationContext.class,0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterDeclaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitDeclaration(this);
		}
	}

	public final DeclarationContext declaration() throws RecognitionException {
		DeclarationContext _localctx = new DeclarationContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_declaration);
		try {
			setState(101);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case VAR:
				enterOuterAlt(_localctx, 1);
				{
				setState(98);
				variable_declaration();
				}
				break;
			case FUNCTION:
				enterOuterAlt(_localctx, 2);
				{
				setState(99);
				function_declaration();
				}
				break;
			case PROCEDURE:
				enterOuterAlt(_localctx, 3);
				{
				setState(100);
				procedure_declaration();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variable_declarationContext extends ParserRuleContext {
		public TerminalNode VAR() { return getToken(MPParser.VAR, 0); }
		public List_declarationsContext list_declarations() {
			return getRuleContext(List_declarationsContext.class,0);
		}
		public Variable_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterVariable_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitVariable_declaration(this);
		}
	}

	public final Variable_declarationContext variable_declaration() throws RecognitionException {
		Variable_declarationContext _localctx = new Variable_declarationContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_variable_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			match(VAR);
			setState(104);
			list_declarations(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_declarationsContext extends ParserRuleContext {
		public V_declarationContext v_declaration() {
			return getRuleContext(V_declarationContext.class,0);
		}
		public List_declarationsContext list_declarations() {
			return getRuleContext(List_declarationsContext.class,0);
		}
		public List_declarationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_declarations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterList_declarations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitList_declarations(this);
		}
	}

	public final List_declarationsContext list_declarations() throws RecognitionException {
		return list_declarations(0);
	}

	private List_declarationsContext list_declarations(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		List_declarationsContext _localctx = new List_declarationsContext(_ctx, _parentState);
		List_declarationsContext _prevctx = _localctx;
		int _startState = 8;
		enterRecursionRule(_localctx, 8, RULE_list_declarations, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(107);
			v_declaration();
			}
			_ctx.stop = _input.LT(-1);
			setState(113);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new List_declarationsContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_list_declarations);
					setState(109);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(110);
					v_declaration();
					}
					} 
				}
				setState(115);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class V_declarationContext extends ParserRuleContext {
		public List_identifiersContext list_identifiers() {
			return getRuleContext(List_identifiersContext.class,0);
		}
		public TerminalNode COLON() { return getToken(MPParser.COLON, 0); }
		public TypesContext types() {
			return getRuleContext(TypesContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MPParser.SEMI, 0); }
		public V_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_v_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterV_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitV_declaration(this);
		}
	}

	public final V_declarationContext v_declaration() throws RecognitionException {
		V_declarationContext _localctx = new V_declarationContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_v_declaration);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			list_identifiers(0);
			setState(117);
			match(COLON);
			setState(118);
			types();
			setState(119);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_identifiersContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(MPParser.IDENTIFIER, 0); }
		public List_identifiersContext list_identifiers() {
			return getRuleContext(List_identifiersContext.class,0);
		}
		public TerminalNode COMMA() { return getToken(MPParser.COMMA, 0); }
		public List_identifiersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_identifiers; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterList_identifiers(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitList_identifiers(this);
		}
	}

	public final List_identifiersContext list_identifiers() throws RecognitionException {
		return list_identifiers(0);
	}

	private List_identifiersContext list_identifiers(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		List_identifiersContext _localctx = new List_identifiersContext(_ctx, _parentState);
		List_identifiersContext _prevctx = _localctx;
		int _startState = 12;
		enterRecursionRule(_localctx, 12, RULE_list_identifiers, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			{
			setState(122);
			match(IDENTIFIER);
			}
			_ctx.stop = _input.LT(-1);
			setState(129);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new List_identifiersContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_list_identifiers);
					setState(124);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(125);
					match(COMMA);
					setState(126);
					match(IDENTIFIER);
					}
					} 
				}
				setState(131);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class Function_declarationContext extends ParserRuleContext {
		public TerminalNode FUNCTION() { return getToken(MPParser.FUNCTION, 0); }
		public TerminalNode IDENTIFIER() { return getToken(MPParser.IDENTIFIER, 0); }
		public TerminalNode LB() { return getToken(MPParser.LB, 0); }
		public List_parametersContext list_parameters() {
			return getRuleContext(List_parametersContext.class,0);
		}
		public TerminalNode RB() { return getToken(MPParser.RB, 0); }
		public TerminalNode COLON() { return getToken(MPParser.COLON, 0); }
		public TypesContext types() {
			return getRuleContext(TypesContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MPParser.SEMI, 0); }
		public Compound_statementContext compound_statement() {
			return getRuleContext(Compound_statementContext.class,0);
		}
		public Variable_declarationContext variable_declaration() {
			return getRuleContext(Variable_declarationContext.class,0);
		}
		public Function_declarationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function_declaration; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterFunction_declaration(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitFunction_declaration(this);
		}
	}

	public final Function_declarationContext function_declaration() throws RecognitionException {
		Function_declarationContext _localctx = new Function_declarationContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_function_declaration);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(FUNCTION);
			setState(133);
			match(IDENTIFIER);
			setState(134);
			match(LB);
			setState(135);
			list_parameters();
			setState(136);
			match(RB);
			setState(137);
			match(COLON);
			setState(138);
			types();
			setState(139);
			match(SEMI);
			setState(141);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==VAR) {
				{
				setState(140);
				variable_declaration();
				}
			}

			setState(143);
			compound_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class List_parametersContext extends ParserRuleContext {
		public Not_null_list_parametersContext not_null_list_parameters() {
			return getRuleContext(Not_null_list_parametersContext.class,0);
		}
		public List_parametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list_parameters; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).enterList_parameters(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MPListener ) ((MPListener)listener).exitList_parameters(this);
		}
	}

	public final List_parametersContext list_parameters() throws RecognitionException {
		List_parametersContext _localctx = new List_parametersContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_list_parameters);
		try {
			setState(147);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(145);
				not_null_list_parameters(0);
				}
				break;
			case RB:
				enterOuterAlt(_localctx, 2);
				{
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Not_null_list_parametersContext extends ParserRuleContext {
		public Parameter_declarationContext parameter_declaration() {
			return getRuleContext(Parameter_declarationContext.class,0);
		}
		public Not_null_list_parametersContext not_null_list_parameters() {
			return getRuleContext(Not_null_list_parametersContext.class,0);
		}
		public TerminalNode SEMI() { return getToken(MPParser.SEMI, 0); }
		public Not_null_list_parametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
